"""The boundary conditions."""

class BoundaryConditions:

    """The boundary conditions"""

