"""The parameters of the Interaction."""

class InteractionParameters:

    """The parameters of the Interaction."""

