"""Particles."""

class Particles:

    """Particles is a collection of Particle objects."""

    def __init__(self):
        """Create a Particles."""
        self._particles = []
