"""SimulationTerminalController."""

class SimulationTerminalController:

    """Terminal Controller of Simulation."""
