"""SimulationView."""

class SimulationView:

    """View of Simulation."""
