"""The GUI View of the Simulation."""

class SimulationWindow:

    """The GUI View of the Simulation."""

